fixed case sensetive for logging in, registering and changing email cases, switched height: 100vh to height: 100% at all forms, trying to solve mobile url bar at browser causing elements not showing fully

--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   background-color: white;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
@@ -63,7 +63,7 @@
   margin-top: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
   width: 95%;
   background-color: #cb3066;
   height: 10rem;
